Replace List.of with Arrays.asList