@@ -20,6 +20,7 @@ import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationMetricResu
 
 import java.io.IOException;
 import java.text.MessageFormat;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
@@ -62,9 +63,9 @@ public class MeanSquaredError implements RegressionMetric {
     @Override
     public List<AggregationBuilder> aggs(String actualField, String predictedField) {
         if (result != null) {
-            return List.of();
+            return Arrays.asList();
         }
-        return List.of(AggregationBuilders.avg(AGG_NAME).script(new Script(buildScript(actualField, predictedField))));
+        return Arrays.asList(AggregationBuilders.avg(AGG_NAME).script(new Script(buildScript(actualField, predictedField))));
     }
 
     @Override
