@@ -18,6 +18,7 @@ import org.elasticsearch.xpack.core.ml.dataframe.evaluation.EvaluationMetricResu
 import org.elasticsearch.xpack.core.ml.utils.ExceptionsHelper;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -62,7 +63,7 @@ abstract class AbstractConfusionMatrixMetric implements SoftClassificationMetric
     @Override
     public final List<AggregationBuilder> aggs(String actualField, List<ClassInfo> classInfos) {
         if (result != null) {
-            return List.of();
+            return Arrays.asList();
         }
         List<AggregationBuilder> aggs = new ArrayList<>();
         for (double threshold : thresholds) {
